# interface_demo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  compile.sh
cmake/: find_device.cmake  find_lib_files.cmake  find_yaml.cmake
data/: image.txt
sample/: main.cpp
sample/utils/: utils.cpp  utils.h
scripts/: gen_sample_readme.sh
src/: CMakeLists.txt  detector.cc  detector.h  detector_inner.cc  detector_inner.h
src/utils/: file.cpp  file.h  timer.h
